--- a/Lab1/Employee_App.csproj
+++ b/Lab1/Employee_App.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.26" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 	  <ProjectReference Include="..\Data\Data.csproj" />
 
   </ItemGroup>
