Prepared files for Employer and EmploymentHistory

--- a/Lab1/Properties/launchSettings.json
+++ b/Lab1/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Lab1": {
+    "Employee_App": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
